Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebapp-ingress
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                  name: prometheus-server
                  port:
                      number: 9090
            path: /(.*)
            pathType: Prefix        
    - host: web.contoso.com
      http:
        paths:    
            backend:
              service:
                name: mywebapp
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
